# gm-benchmark

./: .gitignore  Cargo.toml  LICENSE  README.md  bench.sh
brainfuck/: README.md  bench.bf  bench.yml  bf.cc  bf.js  bf.py  bf.rs  helloworld.bf
brainfuck/cpp/: bf.cc
brainfuck/node/: bf.js
brainfuck/python/: bf.py
brainfuck/rust/bf-idiomatic/: Cargo.toml
brainfuck/rust/bf-idiomatic/src/: main.rs
runner/: Cargo.toml
runner/src/: main.rs
src/: main.rs
