[package]
name = "gm-benchmark-runner"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.26"
serde_yaml = "0.8.11"
serde = { version = "1.0.104", features = ["derive"] }
ansi_term = "0.12.1"
